complete code of boss level challenge

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,14 +1,19 @@
 <!-- ------------------------------------------------------------------- -->
                     <%- include('partials/header')%>
 <!-- ------------------------------------------------------------------- --> 
-                    <%- include('partials/navbar')%>
-<!-- ------------------------------------------------------------------- --> 
 
                 <!-- Main content of the app home page -->
 
     <h1>Hello World, This is the home Page</h1>
+    <p><%= homeStartingContent %></p>
+    <% allPost.map( post => { %>
+        <h2><%= post.title %></h2>
+        <p><%= post.content.substring(0,100) +"....."%>
+        <a href="/posts/<%= post.title %>">Read More</a> 
+    </p>
+    <%} ) %>
 
-    
 <!-- ------------------------------------------------------------------- -->
                     <%- include('partials/footer.ejs') %>
 <!-- ------------------------------------------------------------------- -->
+
