--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,6 +10,11 @@
     <script src="/js/jquery.js"></script>
     <script src="/js/bootstrap.min.js"></script>
 </head>
+
 <body>
-    <div class="container">
+   
+ <!-- ------------------------------------------------------------------- --> 
+ <%- include('navbar/')%>
+ <!-- ------------------------------------------------------------------- --> 
+    <div class="main container">
     
