--- a/views/singlepost.ejs
+++ b/views/singlepost.ejs
@@ -4,9 +4,8 @@
 
                 <!-- Main content of the app home page -->
 
-    <h1>Contact</h1>
-    <p><%= contactContent %></p>
-    
+   <h1><%= title %></h1>
+   <p><%= content %></p>
 <!-- ------------------------------------------------------------------- -->
                     <%- include('partials/footer.ejs') %>
 <!-- ------------------------------------------------------------------- -->
