--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,6 @@
+.main {
+    padding-top: 35px;
+}
 .container-fluid {
     padding-top: 70px;
     padding-bottom: 70px;
@@ -10,6 +13,14 @@
     margin-bottom: 0;
     font-size: 12px;
     letter-spacing: 5px;
+}
+.nav-ul {
+    margin-left: 15%;
+
+}
+
+.navbar-nav li {
+    margin-right: 15px;
 }
 .navbar-nav  li a:hover {
     color: #1abc9c !important;
@@ -25,7 +36,7 @@
 	bottom: 0;
 	width: 100%;
 	height: 60px;
-	background-color: #1abc9c;
+	background-color: #4e6e68;
 }
 
 .footer p {
