--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,7 +1,8 @@
 
 </div>
 </body>
-<footer>
-    <h4>CopyRight @2023</h4>
+<div class="footer-padding"></div>
+<footer class="footer">
+    <p>Made by YolaEx CopyRight @2023</p>
 </footer>
 </html>
