--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -1,22 +1,24 @@
 
  <nav class="navbar navbar-expand-lg navbar-dark bg-secondary ">
+     <div class="container">
     <a class="navbar-brand" href="#">DAILY JOURNAL</a>
 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
  <span class="navbar-toggler-icon"></span>
 </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav  me-2 mb-2 mb-lg-0">
+        <ul class="navbar-nav mb-2 mb-lg-0 nav-ul">
             <li id="home" class="nav-item">
                 <a class="nav-link" href="/">HOME</a>
             </li>
           
             <li  id="about" class="nav-item">
-                <a class="nav-link" href="/">ABOUT US</a>
+                <a class="nav-link" href="/about">ABOUT US</a>
             </li>
             <li id="contact" class="nav-item">
-                <a class="nav-link" href="/">CONTACT</a>
+                <a class="nav-link" href="/contact">CONTACT</a>
             </li>
         </ul>
     </div>
+</div>
 </div>
 </nav>
