boss challenge connect with mongo db

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -5,7 +5,7 @@
                 <!-- Main content of the app home page -->
 
     <h1>About</h1>
-    <p><%= aboutContent %></p>
+    <p><%= about.content %></p>
     
 <!-- ------------------------------------------------------------------- -->
                     <%- include('partials/footer.ejs') %>
