--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -5,7 +5,7 @@
                 <!-- Main content of the app home page -->
 
     <h1>Contact</h1>
-    <p><%= contactContent %></p>
+    <p><%= contact.content %></p>
     
 <!-- ------------------------------------------------------------------- -->
                     <%- include('partials/footer.ejs') %>
