--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -2,7 +2,7 @@
 </div>
 </body>
 <div class="footer-padding"></div>
-<footer class="footer">
-    <p>Made by YolaEx CopyRight @2023</p>
+<footer class="footer fixed-bottom">
+    <p>Made by YolaEx CopyRight &copy; 2023</p>
 </footer>
 </html>
