--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,12 +10,18 @@
             <li id="home" class="nav-item">
                 <a class="nav-link" href="/">HOME</a>
             </li>
+            <li id="contact" class="nav-item">
+                <a class="nav-link" href="/post">Posts</a>
+            </li>
           
             <li  id="about" class="nav-item">
                 <a class="nav-link" href="/about">ABOUT US</a>
             </li>
             <li id="contact" class="nav-item">
                 <a class="nav-link" href="/contact">CONTACT</a>
+            </li>
+            <li id="contact" class="nav-item">
+                <a class="nav-link" href="/compose">COMPOSE</a>
             </li>
         </ul>
     </div>
