--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,11 +5,11 @@
                 <!-- Main content of the app home page -->
 
     <h1>Hello World, This is the home Page</h1>
-    <p><%= homeStartingContent %></p>
+    <p><%= home.content%></p>
     <% allPost.map( post => { %>
         <h2><%= post.title %></h2>
         <p><%= post.content.substring(0,100) +"....."%>
-        <a href="/posts/<%= post.title %>">Read More</a> 
+        <a href="/posts/<%= post._id %>">Read More</a> 
     </p>
     <%} ) %>
 
